# vibing-server

./: CLAUDE.md  Cargo.toml  README.md  prd.md  server_config.json
benches/: server_benchmark.rs
examples/: api_server.rs  load_test.rs  metrics_viewer.rs  static_server.rs  web_server.rs
src/: acceptor.rs  buffer.rs  config.rs  connection.rs  error.rs  event_loop.rs  http.rs  lib.rs  main.rs  memory.rs  metrics.rs  middleware.rs  router.rs  static_files.rs
static/: index.html
tests/: buffer_tests.rs  http_tests.rs  integration_test.rs  memory_tests.rs  metrics_tests.rs
